세무사 홈피 추가

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/kimu.png" alt="KIMU" style="height:20px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.kimustudio.com/" target=new>(주)키뮤스튜디오</a></p>
+                                <p><a href="https://www.kimustudio.com/" target="_blank">(주)키뮤스튜디오</a></p>
                             </div>
                         </div>
                     </div>
@@ -713,7 +713,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/gcon.png" alt="GCON" style="height:20px;"></a></div>
                             <div class="icon-box-title">                                
-                                <p><a href="https://gcon.or.kr/" target=new>경기콘텐츠진흥원</a></p>
+                                <p><a href="https://gcon.or.kr/" target="_blank">경기콘텐츠진흥원</a></p>
                             </div>
                         </div>
                     </div>
@@ -722,7 +722,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/robolife.png" alt="ROBOLIFE" style="height:13px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://www.robolife.co.kr/" target=new>(주)로보라이프</a></p>
+                                <p><a href="http://www.robolife.co.kr/" target="_blank">(주)로보라이프</a></p>
                             </div>
                         </div>
                     </div>
@@ -731,7 +731,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/abrain.webp" alt="ABRAIN" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.abrain.co.kr/" target=new>(주)에이브레인</a></p>
+                                <p><a href="https://www.abrain.co.kr/" target="_blank">(주)에이브레인</a></p>
                             </div>
                         </div>
                     </div>
@@ -740,39 +740,52 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/siis.png" alt="SIIS" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.si-imaging.com" target=new>(주)SIIS</a></p>
+                                <p><a href="https://www.si-imaging.com" target="_blank">(주)SIIS</a></p>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/blatform.png" alt="BLATFORM" style="height:11px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.bunyangi.com/" target=new>(주)블랫폼</a></p>
+                                <p><a href="https://www.bunyangi.com/" target="_blank">(주)블랫폼</a></p>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/kidp.png" alt="KIDP" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.kidp.or.kr" target=new>한국디자인진흥원</a></p>
+                                <p><a href="https://www.kidp.or.kr" target="_blank">한국디자인진흥원</a></p>
                             </div>
                         </div>
                     </div>
+                    
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/trinity.png" alt="AIRON" style="height:12px;"></a></div>
+                            <div class="icon-box-title">
+                                <p><a href="https://www.saramin.co.kr/zf_user/company-info/view/csn/bGN3TlRlRnc3dzArQnBIbmVkbWFOUT09/company_nm/%EC%84%B8%EB%AC%B4%EA%B7%B8%EB%A3%B9%20%ED%8A%B8%EB%A6%AC%EB%8B%88%ED%8B%B0" target="_blank">세무그룹 트리니티</a></p>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/airon.png" alt="AIRON" style="height:10px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://blog.naver.com/habarose" target=new>AIR ON</a></p>
+                                <p><a href="https://blog.naver.com/habarose" target="_blank">AIR ON</a></p>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/dorosee.webp" alt="DOROSEE" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://dorosee.kr/" target=new>(주)도로시</a></p>
+                                <p><a href="http://dorosee.kr/" target="_blank">(주)도로시</a></p>
                             </div>
                         </div>
                     </div>
@@ -781,7 +794,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/kvic.png" alt="KVIC" style="height:12px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://k-vic.co.kr/" target=new>한국벤처투자(주)</a></p>
+                                <p><a href="https://k-vic.co.kr/" target="_blank">한국벤처투자(주)</a></p>
                             </div>
                         </div>
                     </div>
@@ -790,7 +803,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/mysc.png" alt="MYSC" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://mysc.co.kr/" target=new>엠와이소셜컴퍼니(MYSC)</a></p>
+                                <p><a href="https://mysc.co.kr/" target="_blank">엠와이소셜컴퍼니(MYSC)</a></p>
                             </div>
                         </div>
                     </div>
@@ -799,7 +812,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/jdc.png" alt="JDC" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.jdcenter.com/" target=new>제주국제자유도시개발센터(JDC)</a></p>
+                                <p><a href="https://www.jdcenter.com/" target="_blank">제주국제자유도시개발센터(JDC)</a></p>
                             </div>
                         </div>
                     </div>
@@ -808,7 +821,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/narae.png" alt="NARAE" style="height:17px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.makersnr.com/" target=new>한국메이커스협동조합 나래</a></p>
+                                <p><a href="https://www.makersnr.com/" target="_blank">한국메이커스협동조합 나래</a></p>
                             </div>
                         </div>
                     </div>
@@ -817,7 +830,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/kiat.png" alt="KIAT" style="height:12px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.kiat.or.kr/" target=new>한국산업기술진흥원</a></p>
+                                <p><a href="https://www.kiat.or.kr/" target="_blank">한국산업기술진흥원</a></p>
                             </div>
                         </div>
                     </div>
@@ -826,7 +839,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/smalldays.png" alt="SMALLDAYS" style="height:9px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
+                                <p><a href="https://www.facebook.com/smalldays4u" target="_blank">스몰데이즈</a></p>
                             </div>
                         </div>
                     </div>
@@ -835,7 +848,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/jejucenter.png" alt="JEJU CENTER" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://ccei.creativekorea.or.kr/jeju" target=new>제주 창조경제혁신센터</a></p>
+                                <p><a href="https://ccei.creativekorea.or.kr/jeju" target="_blank">제주 창조경제혁신센터</a></p>
                             </div>
                         </div>
                     </div>
@@ -844,7 +857,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/startupbay.png" alt="JEJU STARTUP BAY" style="height:18px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.facebook.com/StartupbayJeju" target=new>제주 스타트업베이</a></p>
+                                <p><a href="https://www.facebook.com/StartupbayJeju" target="_blank">제주 스타트업베이</a></p>
                             </div>
                         </div>
                     </div>
@@ -853,7 +866,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/cku.png" alt="CKU" style="height:18px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://www.cku.ac.kr" target=new>가톨릭관동대학교</a></p>
+                                <p><a href="http://www.cku.ac.kr" target="_blank">가톨릭관동대학교</a></p>
                             </div>
                         </div>
                     </div>
@@ -862,7 +875,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/gov.png" alt="KIPO" style="height:18px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.kipo.go.kr" target=new>특허청</a></p>
+                                <p><a href="https://www.kipo.go.kr" target="_blank">특허청</a></p>
                             </div>
                         </div>
                     </div>
@@ -881,7 +894,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/companya.png" alt="Company A" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://companya.kr/" target=new>엑셀러레이터 컴퍼니에이</a></p>
+                                <p><a href="http://companya.kr/" target="_blank">엑셀러레이터 컴퍼니에이</a></p>
                             </div>
                         </div>
                     </div>
@@ -890,7 +903,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/gsu.png" alt="GSU" style="height:18px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.gw.ac.kr/gsu" target=new>강원도립대학교</a></p>
+                                <p><a href="https://www.gw.ac.kr/gsu" target="_blank">강원도립대학교</a></p>
                             </div>
                         </div>
                     </div>
@@ -899,7 +912,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/kibo.png" alt="KIBO" style="height:13px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
+                                <p><a href="https://www.kibo.or.kr:444/" target="_blank">기술보증기금</a></p>
                             </div>
                         </div>
                     </div>
@@ -908,7 +921,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/gov.png" alt="MSS" style="height:18px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
+                                <p><a href="https://www.mss.go.kr" target="_blank">중소벤처기업부</a></p>
                             </div>
                         </div>
                     </div>
@@ -917,7 +930,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/tipip.png" alt="TIPIP" style="height:13px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="https://tipip.kr" target=new>티아이피 특허법률 사무소</a></p>
+                                <p><a href="https://tipip.kr" target="_blank">티아이피 특허법률 사무소</a></p>
                             </div>
                         </div>
                     </div>
@@ -926,7 +939,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/appso.png" alt="APPSO" style="height:18px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
+                                <p><a href="http://appsosystem.com" target="_blank">(주)앱소</a></p>
                             </div>
                         </div>
                     </div>
@@ -935,7 +948,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/hongsee.png" alt="HONGSEE" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
+                                <p><a href="http://www.creativehongsee.com/" target="_blank">크리에이티브 홍시</a></p>
                             </div>
                         </div>
                     </div>
@@ -1008,10 +1021,10 @@
                                         <li><a href="https://www.facebook.com/APLYPLATFORM"><i
                                                     class="fab fa-facebook-f"></i></a></li>
                                         <!--
-                                            <li><a href="https://blog.naver.com/duniplatform target=_new"><span
+                                            <li><a href="https://blog.naver.com/duniplatform target="_blank""><span
                                                     class="ti-rss"></a></li> 
                                         -->
-                                        <li><a href="https://kr.linkedin.com/company/aplyplatform" target=_new><i
+                                        <li><a href="https://kr.linkedin.com/company/aplyplatform" target="_blank"><i
                                                     class="fab fa-linkedin"></i></a></li>
                                         <li>
                                             <div colorscheme="dark" class="fb-like"
@@ -1038,17 +1051,17 @@
                                 </div>
                                 <ul>
                                     <li><a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><img src="assets/images/widgets/7.png" alt="APLX"
+                                        target="_blank"><img src="assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
                                     <li><a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><img src="assets/images/widgets/9.png" alt="AQR"
+                                        target="_blank"><img src="assets/images/widgets/9.png" alt="AQR"
                                             style="width:33px;"></a></li>
                                 </ul>
                                 <ul>
                                     <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><B>R&D KIOSK</B></a></li>                                    
+                                        target="_blank"><B>R&D KIOSK</B></a></li>                                    
                                     <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><img src="assets/images/widgets/6.png" alt="캐치미"
+                                        target="_blank"><img src="assets/images/widgets/6.png" alt="캐치미"
                                             style="width:45px;"></a></li>
                                 </ul>
                             </aside>
