파트너 추가 - 과기정통부

--- a/index.html
+++ b/index.html
@@ -928,6 +928,15 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/gov.png" alt="MSIT" style="height:18px;"></a></div>
+                            <div class="icon-box-title">
+                                <p><a href="https://www.msit.go.kr" target="_blank">과학기술정보통신부</a></p>
+                            </div>
+                        </div>
+                    </div>                    
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/partners/tipip.png" alt="TIPIP" style="height:13px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://tipip.kr" target="_blank">티아이피 특허법률 사무소</a></p>
