--- a/index.html
+++ b/index.html
@@ -1083,10 +1083,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="copyright">
-                                <p>©
+                                <p>
                                     <script>
-                                        var cYear = (new Date()).getFullYear();
-                                        document.write(cYear);
+                                        document.write("©" + (new Date()).getFullYear());
                                     </script>
                                     APLY Inc.
                                 </p>
