서비스 링크 1개 삭제

--- a/index.html
+++ b/index.html
@@ -239,23 +239,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    
-                    <div class="col-lg-6 col-md-6">
-                        <div class="icon-box icon-box-left">
-                            <div class="icon-box-icon"><img src="assets/images/widgets/6.png" border=0></div>
-                            <div class="feature-content">
-                                <h6>캐치미 (CatchMe)</h6>
-                                <p>AI 기반 영상인식 "무궁화 꽃이 피었습니다" 게임</p>
-                                <p>
-                                    <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
-                                        target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-                                    <a href="https://www.facebook.com/TheCatchMe/" target="new"><i
-                                            class="ti-facebook"></i></a>&nbsp;&nbsp;
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    </div>                                        
                 </div>
             </div>
         </section>
@@ -1020,8 +1004,7 @@
                                             <option>-------------------------------------</option>
                                             <option value="aqr">AQR</option>
                                             <option value="aplx">APLX</option>
-                                            <option value="kiosk">R&D KIOSK</option>
-                                            <option value="catchme">CATCHME</option>
+                                            <option value="kiosk">R&D KIOSK</option>                                            
                                         </select>
                                     </p>
                                     <ul class="social-icons">
@@ -1068,10 +1051,7 @@
                                 </ul>
                                 <ul>
                                     <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target="_blank"><B>R&D KIOSK</B></a></li>                                    
-                                    <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target="_blank"><img src="assets/images/widgets/6.png" alt="캐치미"
-                                            style="width:45px;"></a></li>
+                                        target="_blank"><B>R&D KIOSK</B></a></li>
                                 </ul>
                             </aside>
                         </div>
@@ -1087,7 +1067,7 @@
                                     <script>
                                         document.write("©" + (new Date()).getFullYear());
                                     </script>
-                                    APLY Inc.
+                                    APLY Inc. All rights reserved.
                                 </p>
                             </div>
                         </div>
