--- a/recruit/index.html
+++ b/recruit/index.html
@@ -484,7 +484,6 @@
                                             <option value="aqr">AQR</option>
                                             <option value="aplx">APLX</option>
                                             <option value="kiosk">R&D KIOSK</option>
-                                            <option value="catchme">CATCHME</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
@@ -528,10 +527,7 @@
                                 </ul>
                                 <ul>
                                     <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><B>R&D KIOSK</B></a></li>                                    
-                                    <li><a href="https://catchme.aply.biz/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><img src="../assets/images/widgets/6.png" alt="캐치미"
-                                            style="width:45px;"></a></li>
+                                        target=_new><B>R&D KIOSK</B></a></li>                                                                        
                                 </ul>
                             </aside>
                         </div>
@@ -547,7 +543,7 @@
                                     <script>
                                         document.write("©" + (new Date()).getFullYear());
                                     </script>
-                                    APLY Inc.
+                                    APLY Inc. All rights reserved.
                                 </p>
                             </div>
                         </div>
