recaptcha 약관 박스 감추기

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -64,6 +64,10 @@
             display: inline-block;
             line-height: 1em;
         }
+
+        .grecaptcha-badge {
+            visibility: hidden;
+        }
     </style>
 </head>
 
@@ -230,10 +234,9 @@
                                         href="javascript:showPrivacyDialog();">개인정보 처리방침</a> 동의 <span
                                         class="required">(필수)</span></label></p>
                             <hr class="m-b-30 m-t-30">
-
                             <div class="text-center">
-                                <input class="btn btn-circle btn-brand" id="email_up_send" type="submit"
-                                    value="연락처 남기기">
+                                <input class="btn btn-circle btn-brand btn-block" id="email_up_send" type="submit" value="연락처 남기기">
+                                    이 사이트는 reCAPTCHA의 보호를 받으며 Google <a href='https://policies.google.com/privacy' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://policies.google.com/terms' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.</a>
                             </div>
                             <input type="hidden" name="form_token" id="form_token">
                             <input name="form_kind" id="form_kind" type="hidden" value="recruit">
