AQR 소개 문구 수정

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/9.png" width="30px" border=0></div>
                             <div class="feature-content">
                                 <h6>AQR (Advanced QR)</h6>
-                                <p>앱설치와 수수료가 없는 간편 송금 지원 서비스</p>
+                                <p>앱설치와 수수료가 없는 송금 절차 간소화 서비스</p>
                                 <p>
                                     <a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>                                    
