--- a/symbol/index.html
+++ b/symbol/index.html
@@ -153,8 +153,7 @@
                                     <div class="accordion-item-body">                                        
                                         <p>- 즐겁게 일하기 위한 진보된 플랫폼</p>
                                         <p>- 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p>                                        
-                                        <p>- APLX : 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼</p>
-                                        <p>- APLX : THE PATH TO THE NEXT</p>
+                                        <p>- THE PATH TO THE NEXT</p>                                        
                                     </div>
                                 </div>
                             </div>
@@ -177,9 +176,12 @@
                                 </div>
                                 <div class="collapse show" id="collapse-3" data-parent="#accordion3">
                                     <div class="accordion-item-body">
-                                        <p>- 소개:<BR>보다 진보된 기술로 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼을 연구/개발하는 스타트업 입니다</p>
-                                        <p>- 주요 제품 및 서비스:<BR>증강현실 기반 전시/홍보/커뮤니케이션 플랫폼</p>
-                                        <p>간편 송금 지원 서비스</p>
+                                        <p>- 소개:<BR>간편한 송금 지원 서비스를 제공하여 개인과 기업의 경제 활동을 돕습니다.</p>
+                                        <p>- 주요 제품 및 서비스:<br>
+                                            AQR : 간편 송금 지원 서비스<br>
+                                            AQR : 설치와 가입이 필요 없는 송금 절차 간소화 서비스<br>
+                                            APLX : 증강현실 기반 전시/홍보/커뮤니케이션 플랫폼<br>
+                                        </p>                                        
                                     </div>
                                 </div>
                             </div>
@@ -203,10 +205,10 @@
                                 <div class="collapse show" id="collapse-5" data-parent="#accordion5">
                                     <div class="accordion-item-body">
                                         <p>
-                                            - ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕습니다.
+                                            - 간편한 송금 지원 서비스를 제공하여 개인과 기업의 경제 활동을 돕습니다.
                                         </p>
                                         <p>
-                                            - 간편한 송금 지원 서비스를 제공하여 다양한 개인과 소상공인의 경제 활동을 돕습니다.
+                                            - ICT 기술에 익숙하지 않아도 증강현실 기반의 새로운 홍보 기술을 활용할 수 있도록 돕습니다.
                                         </p>
                                     </div>
                                 </div>
@@ -230,7 +232,7 @@
                                 <div class="collapse show" id="collapse-4" data-parent="#accordion4">
                                     <div class="accordion-item-body">
                                         <p>- <a href="https://aplx.aply.biz/aqr">AQR</a> : 간편 송금 지원 서비스<br>
-                                            번거로운 모바일 송금 절차를 간소화하여 다양한 경제활동을 돕는 서비스</p>
+                                            번거로운 모바일 송금 절차를 간소화하여 경제활동을 돕는 서비스</p>
                                     </div>
 
                                     <div class="accordion-item-body">
@@ -447,17 +449,11 @@
                                                 src=./images/280x123_2_bgcolor.png> <img
                                                 src=./images/280x123_3_logo_white.png> <img
                                                 src=./images/280x280.png> <img
-                                                src=./images/320x132.png> <img src=./images/logo.png>
+                                                src=./images/320x132.png> <img src=./images/logo.png>                                                 
+                                                <img src=./images/280x123_3_logo_black.png>
                                         </div>
                                         </p>
-
-                                        <p>
-                                        <div style="background:#eeeeee">
-                                            <img src=./images/aplx_og_image.png> <img
-                                                src=./images/logo_aplx.png>
-                                        </div>
-                                        </p>
-
+                                        
                                         <p>
                                         <div style="background:#eeeeee">
                                             <img src=./images/aqr_og_image.png> 
@@ -466,6 +462,14 @@
                                             <img src=./images/aqr-android-chrome-256x256.png>
                                         </div>
                                         </p>
+
+                                        <p>
+                                            <div style="background:#eeeeee">
+                                                <img src=./images/aplx_og_image.png> <img
+                                                    src=./images/logo_aplx.png>
+                                            </div>
+                                        </p>
+
                                     </div>
                                 </div>
                             </div>
