APLX 링크 모두 수정

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 <h6>AQR (Advanced QR)</h6>
                                 <p>앱설치와 수수료가 없는 송금 절차 간소화 서비스</p>
                                 <p>
-                                    <a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                    <a href="https://aqr.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>                                    
                                 </p>
                             </div>
@@ -220,7 +220,7 @@
                                 <h6>어플엑스 (APLX)</h6>
                                 <p>증강현실 기반 홍보/전시/커뮤니케이션 플랫폼</p>
                                 <p>
-                                    <a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                    <a href="https://home.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>                                    
                                 </p>
                             </div>
@@ -1042,10 +1042,10 @@
                                     <h6>Portfolio</h6>
                                 </div>
                                 <ul>
-                                    <li><a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                    <li><a href="https://home.aplx.link/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target="_blank"><img src="assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
-                                    <li><a href="https://aplx.aply.biz/aqr?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                    <li><a href="https://aqr.aplx.link/aqr?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target="_blank"><img src="assets/images/widgets/9.png" alt="AQR"
                                             style="width:33px;"></a></li>
                                 </ul>
