--- a/recruit/index.html
+++ b/recruit/index.html
@@ -521,10 +521,10 @@
                                     <h6>Portfolio</h6>
                                 </div>
                                 <ul>
-                                    <li><a href="https://aplx.aply.biz/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                    <li><a href="https://home.aplx.link/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="../assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
-                                    <li><a href="https://aplx.aply.biz/aqr?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                    <li><a href="https://aqr.aplx.link/aqr?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="../assets/images/widgets/9.png" alt="AQR"
                                             style="width:33px;"></a></li>                                    
                                 </ul>
